Display errors and prevent mini-screen overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,6 +66,7 @@ textarea:focus
     background-color: white;
     font-size: 8px;
     padding: 9px;
+    overflow: hidden;
 }
 
 .mini-screen:hover {
@@ -163,7 +164,7 @@ textarea:focus
     width: 12%;
     height: 5%;
     margin-left: 27px;
-    margin-top: 5px;
+    margin-top: -41px;
 
     border-radius: 30px;
     text-align: center;
@@ -179,7 +180,6 @@ textarea:focus
     height: 5%;
     margin-left: auto;
     margin-right: 27px;
-    margin-top: -40px;
 
     border-radius: 30px;
     text-align: center;
